maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:26: error: not found: value c
  c+=1
  ^PledgeMaze:29: error: not found: value c
    c-=1
    ^PledgeMaze:9: error: not enough arguments for method suivremur: (c: Int)Unit.
Unspecified value parameter c.
      suivremur()
               ^